--- a/popup.html
+++ b/popup.html
@@ -16,17 +16,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            z-index: 9999;
+            background-color: rgba(0, 0, 0, 0.8);
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 9999;
         }
         #popup img {
             max-width: 90%;
             max-height: 90%;
-            border: 3px solid white;
-            box-shadow: 0 0 10px #000;
+            border: 2px solid white;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
         }
         #popup button {
             position: absolute;
@@ -36,22 +36,21 @@
             color: white;
             border: none;
             padding: 10px 15px;
+            font-size: 16px;
             cursor: pointer;
-            border-radius: 50%;
-            font-size: 20px;
         }
     </style>
+</head>
+<body>
+    <div id="popup">
+        <img src="https://drive.google.com/uc?export=view&id=1v9IafyK95VN3UrBKGCQ3pyafksH3W202" alt="Popup Image">
+        <button onclick="closePopup()">Close</button>
+    </div>
+
     <script>
         function closePopup() {
             document.getElementById('popup').style.display = 'none';
         }
     </script>
-</head>
-<body>
-    <div id="popup">
-        <img src="https://drive.google.com/uc?export=view&id=1v9IafyK95VN3UrBKGCQ3pyafksH3W202" alt="Popup Image">
-        <button onclick="closePopup()">&times;</button>
-    </div>
 </body>
 </html>
-
