--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="popup">
-        <img src="https://drive.google.com/uc?export=view&id=1v9IafyK95VN3UrBKGCQ3pyafksH3W202" alt="Popup Image">
+        <img src="https://github.com/Rithulkrishnan/popup/blob/main/Care%20Poster%202-01.jpg?raw=true" alt="Popup Image">
         <button onclick="closePopup()">Close</button>
     </div>
 
