--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div id="popup">
-        <img src="https://github.com/Rithulkrishnan/popup/blob/main/Care%20Poster%202-01.jpg?raw=true" alt="Popup Image">
+        <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
         <button onclick="closePopup()">Close</button>
     </div>
 
