--- a/popup.html
+++ b/popup.html
@@ -5,52 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popup</title>
     <style>
-        body {
+        /* Basic reset */
+        body, html {
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            width: 100%;
+            height: 100%;
         }
-        #popup {
+        /* Overlay styles */
+        #popupOverlay {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 9999;
+            z-index: 9999; /* Ensures it is above all other elements */
         }
+        /* Popup container */
+        #popup {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 80%;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+        /* Image styling */
         #popup img {
-            max-width: 90%;
-            max-height: 90%;
-            border: 2px solid white;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
         }
-        #popup button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
+        /* Close button */
+        #closePopup {
+            display: block;
+            margin-top: 10px;
+            padding: 10px 20px;
             background: red;
             color: white;
             border: none;
-            padding: 10px 15px;
-            font-size: 16px;
+            border-radius: 5px;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div id="popup">
-        <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
-        <button onclick="closePopup()">Close</button>
+    <div id="popupOverlay">
+        <div id="popup">
+            <img src="https://raw.githubusercontent.com/<username>/<repository>/<branch>/popup-image.jpg" alt="Popup Image">
+            <button id="closePopup">Close</button>
+        </div>
     </div>
 
     <script>
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
-        }
+        // Close the popup when the button is clicked
+        document.getElementById('closePopup').addEventListener('click', function() {
+            document.getElementById('popupOverlay').style.display = 'none';
+        });
     </script>
 </body>
 </html>
