--- a/popup.html
+++ b/popup.html
@@ -60,7 +60,7 @@
 <body>
     <div id="popupOverlay">
         <div id="popup">
-            <img src="https://github.com/Rithulkrishnan/popup/blob/main/Care%20Poster%202-01.jpg?raw=true" alt="Popup Image">
+            <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
             <button id="closePopup">Close</button>
         </div>
     </div>
