--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popup</title>
     <style>
-        /* Prevent scrolling */
+        /* Prevent scrolling on the main page */
         body, html {
             margin: 0;
             padding: 0;
@@ -13,7 +13,8 @@
             width: 100%;
             height: 100%;
         }
-        /* Fullscreen overlay */
+
+        /* Overlay styles */
         #popupOverlay {
             position: fixed;
             top: 0;
@@ -26,23 +27,23 @@
             align-items: center;
             z-index: 9999;
         }
+
         /* Popup container */
         #popup {
             background: white;
             border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             text-align: center;
-            max-width: 90%;
-            max-height: 90%;
-            overflow: auto; /* Scroll content if too large */
+            padding: 10px;
         }
+
         /* Image styling */
         #popup img {
-            width: 100%;
-            height: auto;
+            max-width: 100%;
+            max-height: 100vh; /* Ensures the image fits within the viewport height */
             border-radius: 10px;
         }
+
         /* Close button */
         #closePopup {
             margin-top: 10px;
