--- a/popup.html
+++ b/popup.html
@@ -51,7 +51,7 @@
             top: 10px;
             right: 10px;
             background: none;
-            color: black;
+            color: red;
             border: none;
             font-size: 20px;
             font-weight: bold;
@@ -60,14 +60,14 @@
         }
 
         #closePopup:hover {
-            color: red;
+            color: darkred;
         }
     </style>
 </head>
 <body>
     <div id="popupOverlay">
         <div id="popup">
-            <button id="closePopup">&times;</button> <!-- Close button -->
+            <button id="closePopup">Close</button> <!-- Close button with text "Close" -->
             <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
         </div>
     </div>
