--- a/popup.html
+++ b/popup.html
@@ -50,24 +50,26 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background: none;
-            color: red;
+            background-color: red; /* Red background */
+            color: white; /* White text */
             border: none;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 5px; /* Rounded corners */
             cursor: pointer;
             z-index: 10000;
         }
 
         #closePopup:hover {
-            color: darkred;
+            background-color: darkred; /* Darker red on hover */
         }
     </style>
 </head>
 <body>
     <div id="popupOverlay">
         <div id="popup">
-            <button id="closePopup">Close</button> <!-- Close button with text "Close" -->
+            <button id="closePopup">Close</button> <!-- Close button with rectangle and bold white text -->
             <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
         </div>
     </div>
