--- a/popup.html
+++ b/popup.html
@@ -69,7 +69,7 @@
 <body>
     <div id="popupOverlay">
         <div id="popup">
-           // <button id="closePopup">Close</button> <!-- Close button with rectangle and bold white text -->
+            <!-- <button id="closePopup">Close</button>--> <!-- Close button with rectangle and bold white text -->
             <img src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg" alt="Popup Image">
         </div>
     </div>
