--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
     <!-- Full-screen popup overlay -->
     <div id="popupOverlay">
         <button class="popup-close" onclick="closePopup()">X</button>
-        <iframe class="popup-content" src="https://rithulkrishnan.github.io/popup/popup.html"></iframe>
+        <iframe class="popup-content" src="https://raw.githubusercontent.com/Rithulkrishnan/popup/main/Care%20Poster%202-01.jpg"></iframe>
     </div>
 
     <script>
@@ -56,7 +56,7 @@
         }
 
         // Optional: Close the popup after 5 seconds
-        setTimeout(closePopup, 5000); // Closes after 5 seconds (adjust as needed)
+        setTimeout(closePopup, 15000); // Closes after 5 seconds (adjust as needed)
     </script>
 </body>
 </html>
